next
[*] Extension is now compatible only with Yii 1.1.
[*] Changed translation category to 'yiiext'.
[*] New naming conventions.

0.4
Warning: this version is not backwards compatible to 0.3.

[+] Added lazy-loading attributes.
[+] Added caching attributes, set CacheId.
[*] Added additional boolean parameter $save for methods setEavAttribute, setEavAttributes, deleteEavAttributes, for save immediately.
[+] Added method saveEavAttributes().
[+] Added method deleteEavAttributes().
[*] Deleted findByEavAttributes() and findAllByEavAttributes() method. Use withEavAttributes().
[+] New syntax: $contacts = Contact::model()->withEavAttributes(array('skype' => 'yii'))->findAll().
[+] Added init test.
[+] Added setAttributes method.
[*] setEavAttribute now return owner CActiveRecord.
[*] Fixed deleting eav-attributes after delete models.
[*] Fixed saving array of attribute values.
[*] Fixed saving secondary change for attribute value.
[*] Added translation for messages.
[+] English readme.
[*] Corrected english descriptions.
[*] getEavAttribute now returns null if attribute is not defined.
[*] Minor code improvements.

0.3
[-] Deleted method readEavAttributes
[+] Search model by eav-attribute set
[+] All queries in DB will generated by CDbCriteria
[*] Method saveEavAttributes changed to saveEavAttribute to allow to save each attribute
[*] Method getModelTableFk now returns value of primary key. To get FK name use getModelTableFkField

0.2
[-] AR for each eav-attribute

0.1
[+] Initial public release.