@@ -1,4 +1,5 @@
 next
+[*] Fixed error on get attribute without preload. 
 [*] Extension is now compatible only with Yii 1.1.
 [*] Changed translation category to 'yiiext'.
 [*] New naming conventions.
